tests/kulezi_tests/good/alignment_strings.lat
int main() {
    string a = "a";
    string b = "b";
    string c;
    printInt(convert(b) + convert(a) + convert(a + b));
    return 0;
}

int convert(string s) {
    if (s == "a")
        return 0;
    else
        return 1;
}