tests/kulezi_tests/bad/string2.lat
int main() {
    string s1 = "abcdef";
    string s2 = "abcdee";
    if (s1 < s2) {
        return 0;
    } else {
        return 1;
    }
}